Intergrated AI for Intelligent analysis

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 VITE_SUPABASE_PROJECT_ID="woqgxfoycgtvgiuoygpc"
 VITE_SUPABASE_PUBLISHABLE_KEY="sb_publishable_K9wRVwrWporXuesz1gO93w_kn1rjcQn"
 VITE_SUPABASE_URL="https://woqgxfoycgtvgiuoygpc.supabase.co"
+
+VITE_OLLAMA_BASE_URL=http://127.0.0.1:11434
+VITE_OLLAMA_MODEL=gemma3:1b
+
